[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "ninja",
    "cmake>=3.12",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]

# [tool.cibuildwheel]
# test-command = "pytest {project}/tests"
# test-extras = ["test"]
# test-skip = ["*universal2:arm64"]
# # Setuptools bug causes collision between pypy and cpython artifacts
# before-build = "rm -rf {project}/build"
