[build-system]
requires = [
    "setuptools>=61.2.0",
    "wheel>=0.37.1",
    "ninja",
    "cmake>=3.21",
    "setuptools_scm[toml]>=6.4.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]

# [tool.cibuildwheel]
# test-command = "pytest {project}/tests"
# test-extras = ["test"]
# test-skip = ["*universal2:arm64"]
# # Setuptools bug causes collision between pypy and cpython artifacts
# before-build = "rm -rf {project}/build"
